--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    <h1>Hello world</h1>
-</body>
-</html>
+---
+layout: default
+tittle: home
+---
+
+    <h1>Nama: Deswita Nazwa Ariani</h1>
+    <p> Deskripsi Diri: Saya berasal dari Lhokseumawe, sekarang berkuliah di Polteknik Negeri Lhokseumawe sebagai Mahasiswa Jurusan TIK.</p>
+    
+    
