--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ tittle: home
 ---
 
     <h1>Nama: Deswita Nazwa Ariani</h1>
-    <p> Deskripsi Diri: Saya berasal dari Lhokseumawe, sekarang berkuliah di Polteknik Negeri Lhokseumawe sebagai Mahasiswa Jurusan TIK.</p>
+    <p> halooowww, welcome back to my github channel, you can ask me anything, before that i want you to know my friends hihihi</p>
     
     
